# ChangeLog for media-sound/guayadeque
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/guayadeque/ChangeLog,v 1.7 2011/07/17 09:15:08 jlec Exp $

  17 Jul 2011; Justin Lecher <jlec@gentoo.org> guayadeque-0.2.7.ebuild,
  guayadeque-0.2.9.ebuild, guayadeque-0.3.1.ebuild, metadata.xml:
  Fix for change in wxwidgets.eclass

*guayadeque-0.3.1 (04 Jun 2011)

  04 Jun 2011; Justin Lecher <jlec@gentoo.org> +guayadeque-0.3.1.ebuild:
  Version Bump, #369953

  23 Feb 2011; Justin Lecher <jlec@gentoo.org> guayadeque-0.2.9.ebuild:
  Depend on X support on wxGtk, #355953

*guayadeque-0.2.9 (22 Feb 2011)

  22 Feb 2011; Justin Lecher <jlec@gentoo.org> +guayadeque-0.2.9.ebuild,
  metadata.xml:
  Version Bumo, #355769

  20 Feb 2011; Justin Lecher <jlec@gentoo.org> guayadeque-0.2.7.ebuild,
  metadata.xml:
  Better handling of langs, corrected maintainer email

  20 Feb 2011; Justin Lecher <jlec@gentoo.org> guayadeque-0.2.7.ebuild:
  No tests available

*guayadeque-0.2.7 (20 Feb 2011)

  20 Feb 2011; Justin Lecher <jlec@gentoo.org> +guayadeque-0.2.7.ebuild,
  +metadata.xml:
  New addition, written by Lukas, enhanced by unknown contributor
