@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/guayadeque
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/guayadeque/ChangeLog,v 1.7 2011/07/17 09:15:08 jlec Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/guayadeque/ChangeLog,v 1.8 2011/10/07 15:19:09 jlec Exp $
+
+  07 Oct 2011; Justin Lecher <jlec@gentoo.org> guayadeque-0.2.7.ebuild,
+  guayadeque-0.2.9.ebuild, guayadeque-0.3.1.ebuild:
+  Remove USE=gstreamer requirement from wxGTK, #383671
+
 
   17 Jul 2011; Justin Lecher <jlec@gentoo.org> guayadeque-0.2.7.ebuild,
   guayadeque-0.2.9.ebuild, guayadeque-0.3.1.ebuild, metadata.xml:
